# android-lgw

./: README.md  build.gradle  keystore.jks  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/commandus/lgw/: ExampleInstrumentedTest.java
app/src/debug/res/values/: ic_launcher_background.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android-helper.cpp  android-helper.h  copy-files.sh  libloragw-helper-android.cpp  loragw_mcu.c.patch  loragw_usb.c.patch  qsort.c  qsort.h  subst.h
app/src/main/cpp/libloragw/: agc_fw_sx1250.var  agc_fw_sx1257.var  arb_fw.var  cal_fw.var  loragw_ad5338r.c  loragw_aux.c  loragw_cal.c  loragw_com.c  loragw_gps.c  loragw_hal.c  loragw_i2c.c  loragw_lbt.c  loragw_mcu.c  loragw_mcu.c.orig  loragw_reg.c  loragw_spi.c  loragw_stts751.c  loragw_sx1250.c  loragw_sx125x.c  loragw_sx1261.c  loragw_sx1302.c  loragw_sx1302_rx.c  loragw_sx1302_timestamp.c  loragw_usb.c  loragw_usb.c.orig  sx1250_com.c  sx1250_spi.c  sx1250_usb.c  sx125x_com.c  sx125x_spi.c  sx1261_com.c  sx1261_pram.var  sx1261_spi.c  sx1261_usb.c
app/src/main/cpp/packet_forwarder/: config.h
app/src/main/cpp/ulgw/: AndroidIdentityService.cpp  AndroidIdentityService.h  errlist.h  gateway_usb_conf.cpp  lgw-event-intf.h  libloragw-helper.cpp  libloragw-helper.h  log-intf.h  lora-gateway-listener.cpp  lora-gateway-listener.h  packet-listener.cpp  packet-listener.h  platform.h  usb-listener.cpp  utillora.cpp
app/src/main/java/com/commandus/ftdi/: FTDI.java  SerialErrorListener.java  SerialSocket.java
app/src/main/java/com/commandus/gui/: AddressItemFragment.java  AddressItemViewModel.java  AddressListFragment.java  ConfirmDeleteDialog.java  ConfirmationListener.java  DeviceAddressAdapter.java  DeviceAddressProvider.java  DevicesActivity.java  EnterUriDialog.java  EnterUriListener.java  GatewayEventAdapter.java  LGWService.java  MainActivity.java  PayloadAdapter.java  PropertiesAdapter.java  RegionDialog.java  SettingsActivity.java
app/src/main/java/com/commandus/lgw/: AddressItemFragment.java  AddressItemViewModel.java  AddressListFragment.java  AddressListResult.java  AddressLoader.java  AddressSelection.java  ConfirmDeleteDialog.java  ConfirmationListener.java  DevAddr.java  DevEUI.java  DeviceAddressAdapter.java  DeviceAddressProvider.java  DeviceAddresses.java  DevicesActivity.java  EnterUriDialog.java  EnterUriListener.java  GatewayEvent.java  GatewayEventAdapter.java  HelpActivity.java  HexBytes.java  ItemSelection.java  KEY128.java  LGW.java  LGWListener.java  LGWService.java  LgwHelper.java  LgwSettings.java  LogHelper.java  LogIntf.java  LoraDeviceAddress.java  LoraWanGateway.java  LorawanGatewayFake.java  LorawanGatewayRak2287.java  MainActivity.java  Payload.java  PayloadActivity.java  PayloadAdapter.java  PayloadDetailFragment.java  PayloadItemViewModel.java  PayloadListFragment.java  (+6 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_devices.xml  activity_help.xml  activity_main.xml  activity_payload.xml  content_devices.xml  content_payload.xml  fragment_address_item.xml  fragment_address_list.xml  fragment_payload_detail.xml  fragment_payload_list.xml  gateway_event_list_item.xml  payload_list_item.xml
app/src/main/res/menu/: menu_device_item.xml  menu_device_list.xml  menu_gateway.xml  menu_payload_list.xml
app/src/main/res/navigation/: nav_graph.xml  nav_graph_address.xml  nav_graph_payload.xml
app/src/main/res/raw/: help.html
app/src/main/res/raw-ru/: help.html
app/src/main/res/values/: arrays.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: root_preferences.xml
gradle/wrapper/: gradle-wrapper.properties
src/debug/res/drawable/: ic_launcher_foreground.xml
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  android-helper.cpp  native-lib.cpp
src/main/java/com/commandus/ftdi/: FTDI.java
src/main/java/com/commandus/lgw/: LGWService.java  MainActivity.java  Payload.java  PayloadAdapter.java  PayloadListener.java  Settings.java
src/main/res/layout/: activity_main.xml
src/main/res/values/: dimens.xml
src/main/res/values-night/: themes.xml
src/test/java/com/commandus/lgw/: ExampleUnitTest.java
(+3 files in other folders)
